# ShroonStructure

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
cmake/: PeregrineStructureConfig.cmake  ShroonStructureTargets.cmake
example/: main.cpp
include/Shroon/Structure/: ErrorReporter.hpp  GenericIterator.hpp  GenericView.hpp  Tree.hpp
src/: ErrorReporter.hpp  GenericIterator.hpp  GenericView.hpp  Structures.hpp  Tree.hpp
